logs/django-easy-split.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_easy_split-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/easy_split'...
Compiling './lib/python3.5/site-packages/easy_split/loader.py'...
***   File "./lib/python3.5/site-packages/easy_split/loader.py", line 45
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easy_split/management'...
Listing './lib/python3.5/site-packages/easy_split/management/commands'...
Compiling './lib/python3.5/site-packages/easy_split/management/commands/update_experiment_reports.py'...
***   File "./lib/python3.5/site-packages/easy_split/management/commands/update_experiment_reports.py", line 33
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easy_split/media'...
Listing './lib/python3.5/site-packages/easy_split/media/experiments'...
Compiling './lib/python3.5/site-packages/easy_split/models.py'...
***   File "./lib/python3.5/site-packages/easy_split/models.py", line 66
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/easy_split/stats.py'...
***   File "./lib/python3.5/site-packages/easy_split/stats.py", line 122
    print 'a or b too big, or ITMAX too small in Betacf.'
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easy_split/templates'...
Listing './lib/python3.5/site-packages/easy_split/templates/experiments'...
Listing './lib/python3.5/site-packages/easy_split/templates/experiments/include'...
Listing './lib/python3.5/site-packages/easy_split/templatetags'...
Listing './lib/python3.5/site-packages/easy_split/tests'...
Compiling './lib/python3.5/site-packages/easy_split/testsettings.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (testsettings.py, line 4)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
